...
                    
                    Link("Medical ID Setup", destination: URL(string: Constants.medicalId)!)
                    
                }
                Section(header: Text("Contact"), footer: Text("Use the above links to be redirected")) {
                    
                    Link("National Domestic Abuse Helpline", destination: URL(string: Constants.phone)!)
                    
                    Link("Follow me on 𝕏 (Twitter)", destination: URL(string: Constants.twitter)!)
                    
                    Link("Feedback", destination: URL(string: Constants.email)!)
                    
                }
...
